Enables new tmux panes and splits to open in same directory
Closes #4

signed-off-by: Nick
signed-off-by: Jon

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,9 +24,9 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 unbind ^W
-bind ^W split-window -p 25 'vim .' \; swap-pane -D
+bind ^W split-window -p 25 -c '#{pane_current_path}' '/usr/bin/env/vim .' \; swap-pane -D
 unbind ^T
-bind ^T split-window -p 25
+bind ^T split-window -p 25 -c '#{pane_current_path}'
 
 # tile all windows
 unbind =
@@ -95,3 +95,8 @@ setw -g automatic-rename
 
 unbind ^E
 bind ^E select-pane -t :.+
+
+# start new tab of pane in current directory
+bind '"' split-window -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
