--- a/tmux.conf
+++ b/tmux.conf
@@ -24,7 +24,7 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 unbind ^W
-bind ^W split-window -p 25 -c '#{pane_current_path}' '/usr/bin/env/vim .' \; swap-pane -D
+bind ^W split-window -p 25 -c '#{pane_current_path}' '/usr/bin/env vim .' \; swap-pane -D
 unbind ^T
 bind ^T split-window -p 25 -c '#{pane_current_path}'
 
