--- a/tmux.conf
+++ b/tmux.conf
@@ -49,10 +49,8 @@ set -g status-right '#[fg=yellow]%Y-%m-%d %H:%M#[default] '
 set-window-option -g window-status-current-bg yellow
 set-window-option -g window-status-current-fg black
 
-set -g mouse-select-pane on
-set -g mouse-select-window on
-set -g mouse-resize-pane on
-set -g mode-mouse on
+set -g mouse-utf8 on
+set -g mouse on
 
 # Pane mappings (Will work with Mac only if option key is meta, see readme)
 
