--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ set -g history-limit 100000
 
 # use VI
 set-window-option -g mode-keys vi
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Use ctrl-e instead of ctrl-b
 set -g prefix C-e
@@ -95,3 +97,6 @@ setw -g automatic-rename
 
 unbind ^E
 bind ^E select-pane -t :.+
+
+#Fix for pbcopy on tmux
+set-option -g default-command "tmux rename-window tmux; reattach-to-user-namespace -l zsh"
