--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,9 @@ set -g history-limit 100000
 
 # use VI
 set-window-option -g mode-keys vi
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+unbind-key -T copy-mode-vi Enter
+bind-key   -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 #Fix for pbcopy on tmux
 set-option -g default-command "tmux rename-window tmux; reattach-to-user-namespace -l zsh"
@@ -51,14 +52,14 @@ set -g status-interval 1
 set -g status-left ' '
 set -g status-right '#[fg=yellow]%Y-%m-%d %H:%M#[default] '
 
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-style bg=yellow,bg=black
 
 set -g mouse on
 bind -n WheelUpPane if-shell -Ft = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -t vi-copy WheelUpPane   halfpage-up
-bind -t vi-copy WheelDownPane halfpage-down
+
+bind -T copy-mode-vi WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Pane mappings (Will work with Mac only if option key is meta, see readme)
 
@@ -69,7 +70,7 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-bind -n M-\ split-window -h
+bind -n M-\\ split-window -h
 bind -n M-- split-window -v
 
 bind-key -nr    M-Up resize-pane -U
