--- a/tmux-tmate.conf
+++ b/tmux-tmate.conf
@@ -6,9 +6,6 @@ set -g history-limit 100000
 # use VI
 set-window-option -g mode-keys vi
 
-#unbind-key -T copy-mode-vi Enter
-#bind-key   -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-
 #Fix for pbcopy on tmux
 set-option -g default-command "tmux rename-window tmux; reattach-to-user-namespace -l zsh"
 
@@ -60,9 +57,6 @@ set -g mouse on
 bind -n WheelUpPane if-shell -Ft = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-#bind -T copy-mode-vi WheelUpPane   send-keys -X halfpage-up
-#bind -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
-
 # Pane mappings (Will work with Mac only if option key is meta, see readme)
 
 set -sg escape-time 0
@@ -72,6 +66,7 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# this is loaded in tmux.conf and tmate.conf
 #bind -n M-\\ split-window -h
 bind -n M-- split-window -v
 
